  objects.
- Fixed the BASIC HEAPSIZE constant.
- Implemented "option base" for BASIC, and made "option base 0" the default
- Added "struct __using" and "__fromfile" to C
- Fixed an optimizer bug which affected some FullDuplexSerialversions
- Fixed a preprocessor bug where defines starting with _ were not expanded
- Fixed "dim shared" syntax to match other dim syntaxes

Version 3.9.12
- Fixed a BASIC operator precedence problem (<< and >> should have
  been like * and /)
- Allowed plain EXIT and CONTINUE in BASIC
- Added varargs to C
- Implemented switch in C
- Implemented enums in C
- Implemented static variables in C
- Added inline assembly to C
- Began implementation of structs in C

Version 3.9.11
- Added tail call optimization
- Added simple optimization based on commutative math
- Optimize for loops counting down to 0
- Implemented case sensitivity for C, and an optional -C flag
  to force case sensitivity in other languages
- Fixed a number of type parsing problems in C
- Added a new preprocessor (mcpp) for C
- Report an error if ORGH tries to go backwards
- Added support for more kinds of operands in inline assembly
- Added -D__FLEXSPIN__, -D__FLEXBASIC__, and -D__FLEXC__ defines for
  future compatibility (someday this tool will be renamed).
- Look in {argv[0]}/../include for include files by default

Version 3.9.10
- Added a peephole optimizer to replace "mov x, #0 ; add x, y" with
  "mov x, y"
- Added sqrt() operator to BASIC
- Fixed a problem with passing (some) floating point parameters to functions
- Fixed another REP bug in the P2 optimizer
- Fixed cognew/coginit return value when no free cog is available
- Fixed another CSE bug
- Fixed a floating point display bug (E notation was off by one)
- #ifdef/#endif around #include was broken, fixed now
- Many improvements to the C frontend

Version 3.9.9
- Use P2 encod instruction for >| operator
- Allow x.y expressions to reference constants in an object
- Removed WORD from BASIC types