@@ -260,6 +260,7 @@ GetCurrentLoop(int token)
 %token BAS_CONST      "const"
 %token BAS_CONTINUE   "continue"
 %token BAS_CPU        "cpu"
+%token BAS_DATA       "data"
 %token BAS_DECLARE    "declare"
 %token BAS_DELETE     "delete"
 %token BAS_DIM        "dim"
@@ -295,6 +296,8 @@ GetCurrentLoop(int token)
 %token BAS_PROGRAM    "program"
 %token BAS_PTR        "ptr"
 %token BAS_PUT        "put"
+%token BAS_READ       "read"
+%token BAS_RESTORE    "restore"
 %token BAS_RETURN     "return"
 %token BAS_SELECT     "select"
 %token BAS_SELF       "self"
