@@ -1329,6 +1329,7 @@ struct reservedword basic_keywords[] = {
   { "const", BAS_CONST },
   { "continue", BAS_CONTINUE },
   { "cpu", BAS_CPU },
+  { "data", BAS_DATA },
   { "declare", BAS_DECLARE },
   { "delete", BAS_DELETE },
   { "dim", BAS_DIM },
@@ -1364,6 +1365,8 @@ struct reservedword basic_keywords[] = {
   { "program", BAS_PROGRAM },
   { "ptr", BAS_PTR },
   { "put", BAS_PUT },
+  { "read", BAS_READ },
+  { "restore", BAS_RESTORE },
   { "return", BAS_RETURN },
   { "select", BAS_SELECT },
   { "self", BAS_SELF },
