@@ -7,6 +7,7 @@ Version 3.9.13
 - Fixed an optimizer bug which affected some FullDuplexSerialversions
 - Fixed a preprocessor bug where defines starting with _ were not expanded
 - Fixed "dim shared" syntax to match other dim syntaxes
+- Reserved DATA, READ, RESTORE keywords in BASIC
 
 Version 3.9.12
 - Fixed a BASIC operator precedence problem (<< and >> should have
